// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-pagination"
  >
    <div
      class="t-pagination__total"
    >
      共 100 项数据
    </div>
    <div
      class="t-pagination__select"
    >
      <div
        class="t-select-wrap"
      >
        <div
          class="t-popup-reference t-select-popup-reference"
        >
          <div
            class="t-select"
            style="user-select: none;"
          >
            <span
              class="t-select-left-icon"
            />
            <span
              class="t-select-selectedSingle"
            >
              5条/页
            </span>
            <svg
              class="t-fake-arrow t-select-right-icon"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-pagination__btn t-pagination__btn--prev t-is-disabled"
    >
      <svg
        class="t-icon t-icon-chevron-left"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M610.5408 226.56L669.3696 285.39136 442.78784 511.97568 669.3696 738.56 610.5408 797.3888 325.12512 511.97568 610.5408 226.56Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <ul
      class="t-pagination__pager"
    >
      <li
        class="t-pagination__number t-is-current"
      >
        1
      </li>
      <li
        class="t-pagination__number"
      >
        2
      </li>
      <li
        class="t-pagination__number"
      >
        3
      </li>
      <li
        class="t-pagination__number"
      >
        4
      </li>
      <li
        class="t-pagination__number"
      >
        5
      </li>
      <li
        class="t-pagination__number t-pagination__number--more"
      >
        <svg
          class="t-icon t-icon-ellipsis"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M192 448C227.346224 448 256 476.653776 256 512 256 547.346224 227.346224 576 192 576 156.653776 576 128 547.346224 128 512 128 476.653776 156.653776 448 192 448ZM512 448C547.346224 448 576 476.653776 576 512 576 547.346224 547.346224 576 512 576 476.653776 576 448 547.346224 448 512 448 476.653776 476.653776 448 512 448ZM832 448C867.3462208 448 896 476.653776 896 512 896 547.346224 867.3462208 576 832 576 796.6537792 576 768 547.346224 768 512 768 476.653776 796.6537792 448 832 448Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
      </li>
      <li
        class="t-pagination__number"
      >
        20
      </li>
    </ul>
    <div
      class="t-pagination__btn t-pagination__btn--next"
    >
      <svg
        class="t-icon t-icon-chevron-right"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M413.4592 797.3888L354.62784 738.56 581.21216 511.97568 354.62784 285.39136 413.4592 226.56 698.8736 511.97568 413.4592 797.3888Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`jump.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-pagination"
  >
    <div
      class="t-pagination__total"
    >
      共 645 项数据
    </div>
    <div
      class="t-pagination__select"
    >
      <div
        class="t-select-wrap"
      >
        <div
          class="t-popup-reference t-select-popup-reference"
        >
          <div
            class="t-select"
            style="user-select: none;"
          >
            <span
              class="t-select-left-icon"
            />
            <span
              class="t-select-selectedSingle"
            >
              20条/页
            </span>
            <svg
              class="t-fake-arrow t-select-right-icon"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-pagination__btn t-pagination__btn--prev t-is-disabled"
    >
      <svg
        class="t-icon t-icon-chevron-left"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M610.5408 226.56L669.3696 285.39136 442.78784 511.97568 669.3696 738.56 610.5408 797.3888 325.12512 511.97568 610.5408 226.56Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <ul
      class="t-pagination__pager"
    >
      <li
        class="t-pagination__number t-is-current"
      >
        1
      </li>
      <li
        class="t-pagination__number"
      >
        2
      </li>
      <li
        class="t-pagination__number"
      >
        3
      </li>
      <li
        class="t-pagination__number"
      >
        4
      </li>
      <li
        class="t-pagination__number"
      >
        5
      </li>
      <li
        class="t-pagination__number t-pagination__number--more"
      >
        <svg
          class="t-icon t-icon-ellipsis"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M192 448C227.346224 448 256 476.653776 256 512 256 547.346224 227.346224 576 192 576 156.653776 576 128 547.346224 128 512 128 476.653776 156.653776 448 192 448ZM512 448C547.346224 448 576 476.653776 576 512 576 547.346224 547.346224 576 512 576 476.653776 576 448 547.346224 448 512 448 476.653776 476.653776 448 512 448ZM832 448C867.3462208 448 896 476.653776 896 512 896 547.346224 867.3462208 576 832 576 796.6537792 576 768 547.346224 768 512 768 476.653776 796.6537792 448 832 448Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
      </li>
      <li
        class="t-pagination__number"
      >
        33
      </li>
    </ul>
    <div
      class="t-pagination__btn t-pagination__btn--next"
    >
      <svg
        class="t-icon t-icon-chevron-right"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M413.4592 797.3888L354.62784 738.56 581.21216 511.97568 354.62784 285.39136 413.4592 226.56 698.8736 511.97568 413.4592 797.3888Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="t-pagination__jump"
    >
      跳转
      <div
        class="t-input"
      >
        <input
          class="t-input__inner"
        />
      </div>
      页
    </div>
  </div>
</DocumentFragment>
`;

exports[`mini.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-pagination t-size-s"
  >
    <div
      class="t-pagination__total"
    >
      共 100 项数据
    </div>
    <div
      class="t-pagination__select"
    >
      <div
        class="t-select-wrap"
      >
        <div
          class="t-popup-reference t-select-popup-reference"
        >
          <div
            class="t-select t-size-s"
            style="user-select: none;"
          >
            <span
              class="t-select-left-icon"
            />
            <span
              class="t-select-selectedSingle"
            >
              5条/页
            </span>
            <svg
              class="t-fake-arrow t-select-right-icon"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-pagination__btn t-pagination__btn--prev t-is-disabled"
    >
      <svg
        class="t-icon t-icon-chevron-left"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M610.5408 226.56L669.3696 285.39136 442.78784 511.97568 669.3696 738.56 610.5408 797.3888 325.12512 511.97568 610.5408 226.56Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <ul
      class="t-pagination__pager"
    >
      <li
        class="t-pagination__number t-is-current"
      >
        1
      </li>
      <li
        class="t-pagination__number"
      >
        2
      </li>
      <li
        class="t-pagination__number"
      >
        3
      </li>
      <li
        class="t-pagination__number"
      >
        4
      </li>
      <li
        class="t-pagination__number"
      >
        5
      </li>
      <li
        class="t-pagination__number t-pagination__number--more"
      >
        <svg
          class="t-icon t-icon-ellipsis"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M192 448C227.346224 448 256 476.653776 256 512 256 547.346224 227.346224 576 192 576 156.653776 576 128 547.346224 128 512 128 476.653776 156.653776 448 192 448ZM512 448C547.346224 448 576 476.653776 576 512 576 547.346224 547.346224 576 512 576 476.653776 576 448 547.346224 448 512 448 476.653776 476.653776 448 512 448ZM832 448C867.3462208 448 896 476.653776 896 512 896 547.346224 867.3462208 576 832 576 796.6537792 576 768 547.346224 768 512 768 476.653776 796.6537792 448 832 448Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
      </li>
      <li
        class="t-pagination__number"
      >
        20
      </li>
    </ul>
    <div
      class="t-pagination__btn t-pagination__btn--next"
    >
      <svg
        class="t-icon t-icon-chevron-right"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M413.4592 797.3888L354.62784 738.56 581.21216 511.97568 354.62784 285.39136 413.4592 226.56 698.8736 511.97568 413.4592 797.3888Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`more.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-pagination"
  >
    <div
      class="t-pagination__total"
    >
      共 100 项数据
    </div>
    <div
      class="t-pagination__select"
    >
      <div
        class="t-select-wrap"
      >
        <div
          class="t-popup-reference t-select-popup-reference"
        >
          <div
            class="t-select"
            style="user-select: none;"
          >
            <span
              class="t-select-left-icon"
            />
            <span
              class="t-select-selectedSingle"
            >
              5条/页
            </span>
            <svg
              class="t-fake-arrow t-select-right-icon"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-pagination__btn t-pagination__btn--prev t-is-disabled"
    >
      <svg
        class="t-icon t-icon-chevron-left"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M610.5408 226.56L669.3696 285.39136 442.78784 511.97568 669.3696 738.56 610.5408 797.3888 325.12512 511.97568 610.5408 226.56Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <ul
      class="t-pagination__pager"
    >
      <li
        class="t-pagination__number t-is-current"
      >
        1
      </li>
      <li
        class="t-pagination__number"
      >
        2
      </li>
      <li
        class="t-pagination__number"
      >
        3
      </li>
      <li
        class="t-pagination__number"
      >
        4
      </li>
      <li
        class="t-pagination__number"
      >
        5
      </li>
      <li
        class="t-pagination__number t-pagination__number--more"
      >
        <svg
          class="t-icon t-icon-ellipsis"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M192 448C227.346224 448 256 476.653776 256 512 256 547.346224 227.346224 576 192 576 156.653776 576 128 547.346224 128 512 128 476.653776 156.653776 448 192 448ZM512 448C547.346224 448 576 476.653776 576 512 576 547.346224 547.346224 576 512 576 476.653776 576 448 547.346224 448 512 448 476.653776 476.653776 448 512 448ZM832 448C867.3462208 448 896 476.653776 896 512 896 547.346224 867.3462208 576 832 576 796.6537792 576 768 547.346224 768 512 768 476.653776 796.6537792 448 832 448Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
      </li>
      <li
        class="t-pagination__number"
      >
        20
      </li>
    </ul>
    <div
      class="t-pagination__btn t-pagination__btn--next"
    >
      <svg
        class="t-icon t-icon-chevron-right"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M413.4592 797.3888L354.62784 738.56 581.21216 511.97568 354.62784 285.39136 413.4592 226.56 698.8736 511.97568 413.4592 797.3888Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`page-num.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-pagination"
  >
    <div
      class="t-pagination__total"
    >
      共 645 项数据
    </div>
    <div
      class="t-pagination__select"
    >
      <div
        class="t-select-wrap"
      >
        <div
          class="t-popup-reference t-select-popup-reference"
        >
          <div
            class="t-select"
            style="user-select: none;"
          >
            <span
              class="t-select-left-icon"
            />
            <span
              class="t-select-selectedSingle"
            >
              20条/页
            </span>
            <svg
              class="t-fake-arrow t-select-right-icon"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-pagination__btn t-pagination__btn--prev t-is-disabled"
    >
      <svg
        class="t-icon t-icon-chevron-left"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M610.5408 226.56L669.3696 285.39136 442.78784 511.97568 669.3696 738.56 610.5408 797.3888 325.12512 511.97568 610.5408 226.56Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <ul
      class="t-pagination__pager"
    >
      <li
        class="t-pagination__number t-is-current"
      >
        1
      </li>
      <li
        class="t-pagination__number"
      >
        2
      </li>
      <li
        class="t-pagination__number"
      >
        3
      </li>
      <li
        class="t-pagination__number"
      >
        4
      </li>
      <li
        class="t-pagination__number"
      >
        5
      </li>
      <li
        class="t-pagination__number t-pagination__number--more"
      >
        <svg
          class="t-icon t-icon-ellipsis"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M192 448C227.346224 448 256 476.653776 256 512 256 547.346224 227.346224 576 192 576 156.653776 576 128 547.346224 128 512 128 476.653776 156.653776 448 192 448ZM512 448C547.346224 448 576 476.653776 576 512 576 547.346224 547.346224 576 512 576 476.653776 576 448 547.346224 448 512 448 476.653776 476.653776 448 512 448ZM832 448C867.3462208 448 896 476.653776 896 512 896 547.346224 867.3462208 576 832 576 796.6537792 576 768 547.346224 768 512 768 476.653776 796.6537792 448 832 448Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
      </li>
      <li
        class="t-pagination__number"
      >
        33
      </li>
    </ul>
    <div
      class="t-pagination__btn t-pagination__btn--next"
    >
      <svg
        class="t-icon t-icon-chevron-right"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M413.4592 797.3888L354.62784 738.56 581.21216 511.97568 354.62784 285.39136 413.4592 226.56 698.8736 511.97568 413.4592 797.3888Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`simple.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-pagination"
  >
    <div
      class="t-pagination__total"
    >
      共 100 项数据
    </div>
    <div
      class="t-pagination__select"
    >
      <div
        class="t-select-wrap"
      >
        <div
          class="t-popup-reference t-select-popup-reference"
        >
          <div
            class="t-select"
            style="user-select: none;"
          >
            <span
              class="t-select-left-icon"
            />
            <span
              class="t-select-selectedSingle"
            >
              5条/页
            </span>
            <svg
              class="t-fake-arrow t-select-right-icon"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-pagination__btn t-pagination__btn--prev t-is-disabled"
    >
      <svg
        class="t-icon t-icon-chevron-left"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M610.5408 226.56L669.3696 285.39136 442.78784 511.97568 669.3696 738.56 610.5408 797.3888 325.12512 511.97568 610.5408 226.56Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="t-pagination__select"
    >
      <div
        class="t-select-wrap"
      >
        <div
          class="t-popup-reference t-select-popup-reference"
        >
          <div
            class="t-select"
            style="user-select: none;"
          >
            <span
              class="t-select-left-icon"
            />
            <span
              class="t-select-selectedSingle"
            >
              1/20
            </span>
            <svg
              class="t-fake-arrow t-select-right-icon"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-pagination__btn t-pagination__btn--next"
    >
      <svg
        class="t-icon t-icon-chevron-right"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M413.4592 797.3888L354.62784 738.56 581.21216 511.97568 354.62784 285.39136 413.4592 226.56 698.8736 511.97568 413.4592 797.3888Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`simple-mini.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-pagination t-size-s"
  >
    <div
      class="t-pagination__total"
    >
      共 100 项数据
    </div>
    <div
      class="t-pagination__select"
    >
      <div
        class="t-select-wrap"
      >
        <div
          class="t-popup-reference t-select-popup-reference"
        >
          <div
            class="t-select t-size-s"
            style="user-select: none;"
          >
            <span
              class="t-select-left-icon"
            />
            <span
              class="t-select-selectedSingle"
            >
              5条/页
            </span>
            <svg
              class="t-fake-arrow t-select-right-icon"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-pagination__btn t-pagination__btn--prev t-is-disabled"
    >
      <svg
        class="t-icon t-icon-chevron-left"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M610.5408 226.56L669.3696 285.39136 442.78784 511.97568 669.3696 738.56 610.5408 797.3888 325.12512 511.97568 610.5408 226.56Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="t-pagination__select"
    >
      <div
        class="t-select-wrap"
      >
        <div
          class="t-popup-reference t-select-popup-reference"
        >
          <div
            class="t-select t-size-s"
            style="user-select: none;"
          >
            <span
              class="t-select-left-icon"
            />
            <span
              class="t-select-selectedSingle"
            >
              1/20
            </span>
            <svg
              class="t-fake-arrow t-select-right-icon"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-pagination__btn t-pagination__btn--next"
    >
      <svg
        class="t-icon t-icon-chevron-right"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M413.4592 797.3888L354.62784 738.56 581.21216 511.97568 354.62784 285.39136 413.4592 226.56 698.8736 511.97568 413.4592 797.3888Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`total.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-pagination"
  >
    <div
      class="t-pagination__total"
    >
      共 685 项数据
    </div>
    <div
      class="t-pagination__select"
    >
      <div
        class="t-select-wrap"
      >
        <div
          class="t-popup-reference t-select-popup-reference"
        >
          <div
            class="t-select"
            style="user-select: none;"
          >
            <span
              class="t-select-left-icon"
            />
            <span
              class="t-select-selectedSingle"
            >
              10条/页
            </span>
            <svg
              class="t-fake-arrow t-select-right-icon"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-pagination__btn t-pagination__btn--prev t-is-disabled"
    >
      <svg
        class="t-icon t-icon-chevron-left"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M610.5408 226.56L669.3696 285.39136 442.78784 511.97568 669.3696 738.56 610.5408 797.3888 325.12512 511.97568 610.5408 226.56Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <ul
      class="t-pagination__pager"
    >
      <li
        class="t-pagination__number t-is-current"
      >
        1
      </li>
      <li
        class="t-pagination__number"
      >
        2
      </li>
      <li
        class="t-pagination__number"
      >
        3
      </li>
      <li
        class="t-pagination__number"
      >
        4
      </li>
      <li
        class="t-pagination__number"
      >
        5
      </li>
      <li
        class="t-pagination__number t-pagination__number--more"
      >
        <svg
          class="t-icon t-icon-ellipsis"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M192 448C227.346224 448 256 476.653776 256 512 256 547.346224 227.346224 576 192 576 156.653776 576 128 547.346224 128 512 128 476.653776 156.653776 448 192 448ZM512 448C547.346224 448 576 476.653776 576 512 576 547.346224 547.346224 576 512 576 476.653776 576 448 547.346224 448 512 448 476.653776 476.653776 448 512 448ZM832 448C867.3462208 448 896 476.653776 896 512 896 547.346224 867.3462208 576 832 576 796.6537792 576 768 547.346224 768 512 768 476.653776 796.6537792 448 832 448Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
      </li>
      <li
        class="t-pagination__number"
      >
        69
      </li>
    </ul>
    <div
      class="t-pagination__btn t-pagination__btn--next"
    >
      <svg
        class="t-icon t-icon-chevron-right"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M413.4592 797.3888L354.62784 738.56 581.21216 511.97568 354.62784 285.39136 413.4592 226.56 698.8736 511.97568 413.4592 797.3888Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;
